Created using Popcode: https://popcode.org

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,14 @@ Body{
   text-align:center;   
  }
 
-
-
+.gameawards {
+    color: white;
+}
+.fortnite {
+    color: blue;   
+}
+.code {
+ color:pink; 
+}
 
     
